--- a/templates/INDEX.HTML
+++ b/templates/INDEX.HTML
@@ -8,32 +8,89 @@
         body { 
             font-family: Arial; 
             text-align: center; 
-            padding: 50px; 
+            padding-top: 50px;
             color: white; 
             background-size: cover; 
             background-repeat: no-repeat; 
         }
-        input[type=text] { padding:10px; border-radius:5px; border:none; width:200px; }
+
+        .head{
+            font-size: 60px;
+            color: black;
+        }
+
+        .form{
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+            /* flex-direction: column; */
+        }
+
+        .div{
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .weather{
+             display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 10px;
+        }
+
+        .innerweather{
+            width: 50%;
+            border: 5px solid black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 45vh;
+            filter: blur(5);
+            backdrop-filter: blur(5px);
+        }
+
+        h2{
+            font-size: 40px;
+        }
+
+        h3,p{
+            font-size: 30px;
+        }
+
+        .wimg{
+            width: 150px;
+        }
+
+        input[type=text] { padding:10px; border-radius:5px; border:none; width: 60%; }
         input[type=submit] { padding:10px 15px; border:none; border-radius:5px; cursor:pointer; background:#333; color:white; }
-        img { width: 80px; }
+        /* img { width: 80px; } */
     </style>
 </head>
 <body style="background-image: url('{{ weather_bg }}');">
-    <h1>🌤 Simple Weather App</h1>
-    <form method="POST">
-        <input type="text" name="city" placeholder="Enter city name" required>
-        <input type="submit" value="Check Weather">
-    </form>
+    <h1 class="head">🌤 Simple Weather App</h1>
+    <div class="div">
+        <form method="POST" class="form">
+            <input type="text" name="city" placeholder="Enter city name" required >
+            <input type="submit" value="Check Weather">
+        </form>
+    </div>
 
     {% if weather %}
         {% if weather.error %}
             <p>{{ weather.error }}</p>
         {% else %}
-            <div>
-                <h2>{{ weather.city }}, {{ weather.region }}, {{ weather.country }}</h2>
-                <h3>{{ weather.temperature }}°C</h3>
-                <p>{{ weather.condition }}</p>
-                <img src="{{ weather.icon }}" alt="Weather icon">
+            <div class="weather">
+                <div class="innerweather">
+                    <div class="wbox">
+                        <h2>{{ weather.city }}, {{ weather.region }}, {{ weather.country }}</h2>
+                        <h3>Temp: {{ weather.temperature }}°C</h3>
+                        <p>Condition: {{ weather.condition }}</p>
+                    </div>
+                        <img src="{{weather_icon}}" class="wimg" alt="Weather icon">
+                </div>
             </div>
         {% endif %}
     {% endif %}
