--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
         .head {
             font-size: 60px;
-            color: black;
+            color: white;
         }
 
         .form {
